@@ -1,3 +1,7 @@
+2018-12-18  Juan J. merelo  <jmerelo@penny>
+
+	* META6.json: Bumps up with examples and improving documentation.
+
 2018-12-17  Juan J. merelo  <jmerelo@penny>
 
 	* lib/Pod/Load.pm6 (Pod): Adds some more dependencies, and basically gets it ready for deployment in github. Thanks to Ashe Connor (@kivikakk) for the bug repors.
